@@ -4,9 +4,6 @@
 
 #define assert(X) do { if (!(X)) __builtin_abort(); } while(0)
 
-void f(){}
-void g(){}
-
 int main()
 {
   {
@@ -65,29 +62,5 @@ int main()
     static_assert (is_lteq (v));
     static_assert (!is_gt (v));
     static_assert (is_gteq (v));
-  }
-
-  {
-    // GCC doesn't consider &f == &g to be a constant expression (PR 69681)
-    const auto v = &f <=> &g;
-    static_assert (__is_same_as (decltype (v), const std::strong_equality));
-    assert (!is_eq (v));
-    assert (is_neq (v));
-  }
-
-  {
-    struct A { int i; int j; };
-    constexpr auto v = &A::i <=> &A::j;
-    static_assert (__is_same_as (decltype (v), const std::strong_equality));
-    static_assert (!is_eq (v));
-    static_assert (is_neq (v));
-  }
-
-  {
-    struct A { void f(); };
-    constexpr auto v = &A::f <=> &A::f;
-    static_assert (__is_same_as (decltype (v), const std::strong_equality));
-    static_assert (is_eq (v));
-    static_assert (!is_neq (v));
   }
 }
