@@ -59,103 +59,6 @@ namespace std
     };
   }
 
-  class weak_equality
-  {
-    int _M_value;
-
-    constexpr explicit
-    weak_equality(__cmp_cat::_Eq __val) noexcept
-    : _M_value(int(__val))
-    { }
-
-  public:
-    // valid values
-
-    static const weak_equality equivalent;
-    static const weak_equality nonequivalent;
-
-    // comparisons
-
-    friend constexpr bool
-    operator==(weak_equality __v, __cmp_cat::__unspec) noexcept
-    { return __v._M_value == 0; }
-
-    friend constexpr bool
-    operator==(weak_equality, weak_equality) noexcept = default;
-
-    friend constexpr weak_equality
-    operator<=>(weak_equality __v, __cmp_cat::__unspec) noexcept
-    { return __v; }
-
-    friend constexpr weak_equality
-    operator<=>(__cmp_cat::__unspec, weak_equality __v) noexcept
-    { return __v; }
-  };
-
-  // valid values' definitions
-  inline constexpr weak_equality
-  weak_equality::equivalent(__cmp_cat::_Eq::equivalent);
-
-  inline constexpr weak_equality
-  weak_equality::nonequivalent(__cmp_cat::_Eq::nonequivalent);
-
-  class strong_equality
-  {
-    int _M_value;
-
-    constexpr explicit
-    strong_equality(__cmp_cat::_Eq __val) noexcept
-    : _M_value(int(__val))
-    { }
-
-  public:
-    // valid values
-
-    static const strong_equality equal;
-    static const strong_equality nonequal;
-    static const strong_equality equivalent;
-    static const strong_equality nonequivalent;
-
-    // conversion
-    constexpr operator weak_equality() const noexcept
-    {
-      if (_M_value == 0)
-	return weak_equality::equivalent;
-      else
-	return weak_equality::nonequivalent;
-    }
-
-    // comparisons
-
-    friend constexpr bool
-    operator==(strong_equality __v, __cmp_cat::__unspec) noexcept
-    { return __v._M_value == 0; }
-
-    friend constexpr bool
-    operator==(strong_equality, strong_equality) noexcept = default;
-
-    friend constexpr strong_equality
-    operator<=>(strong_equality __v, __cmp_cat::__unspec) noexcept
-    { return __v; }
-
-    friend constexpr strong_equality
-    operator<=>(__cmp_cat::__unspec, strong_equality __v) noexcept
-    { return __v; }
-  };
-
-  // valid values' definitions
-  inline constexpr strong_equality
-  strong_equality::equal(__cmp_cat::_Eq::equal);
-
-  inline constexpr strong_equality
-  strong_equality::nonequal(__cmp_cat::_Eq::nonequal);
-
-  inline constexpr strong_equality
-  strong_equality::equivalent(__cmp_cat::_Eq::equivalent);
-
-  inline constexpr strong_equality
-  strong_equality::nonequivalent(__cmp_cat::_Eq::nonequivalent);
-
   class partial_ordering
   {
     int _M_value;
@@ -182,15 +85,6 @@ namespace std
     static const partial_ordering equivalent;
     static const partial_ordering greater;
     static const partial_ordering unordered;
-
-    // conversion
-    constexpr operator weak_equality() const noexcept
-    {
-      if (_M_value == 0)
-	return weak_equality::equivalent;
-      else
-	return weak_equality::nonequivalent;
-    }
 
     // comparisons
     friend constexpr bool
@@ -278,15 +172,6 @@ namespace std
     static const weak_ordering less;
     static const weak_ordering equivalent;
     static const weak_ordering greater;
-
-    // conversions
-    constexpr operator weak_equality() const noexcept
-    {
-      if (_M_value == 0)
-	return weak_equality::equivalent;
-      else
-	return weak_equality::nonequivalent;
-    }
 
     constexpr operator partial_ordering() const noexcept
     {
@@ -385,23 +270,6 @@ namespace std
     static const strong_ordering equivalent;
     static const strong_ordering greater;
 
-    // conversions
-    constexpr operator weak_equality() const noexcept
-    {
-      if (_M_value == 0)
-	return weak_equality::equivalent;
-      else
-	return weak_equality::nonequivalent;
-    }
-
-    constexpr operator strong_equality() const noexcept
-    {
-      if (_M_value == 0)
-	return strong_equality::equal;
-      else
-	return strong_equality::nonequal;
-    }
-
     constexpr operator partial_ordering() const noexcept
     {
       if (_M_value == 0)
@@ -494,11 +362,11 @@ namespace std
 
   // named comparison functions
   constexpr bool
-  is_eq(weak_equality __cmp) noexcept
+  is_eq(partial_ordering __cmp) noexcept
   { return __cmp == 0; }
 
   constexpr bool
-  is_neq(weak_equality __cmp) noexcept
+  is_neq(partial_ordering __cmp) noexcept
   { return __cmp != 0; }
 
   constexpr bool
